--- a/styles/index.css
+++ b/styles/index.css
@@ -1,18 +1,13 @@
-@tailwind base;
+@import "tailwindcss/base";
 
 /* Write your own custom base styles here */
 
 /* Start purging... */
-@tailwind components;
+@import "tailwindcss/components";
 /* Stop purging. */
 
-/* Write you own custom component styles here */
-.btn-blue {
-  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
-}
-
 /* Start purging... */
-@tailwind utilities;
+@import "tailwindcss/utilities";
 /* Stop purging. */
 
 /* Your own custom utilities */
